# RepresentHW

./: CMakeLists.txt
mlir/: CMakeLists.txt
mlir/include/: CMakeLists.txt
mlir/include/HW1/: CMakeLists.txt  initAll.h
mlir/include/HW1/Conversion/: CMakeLists.txt  ConvertToHW1IRPass.h  Passes.h  Passes.td
mlir/include/HW1/Dialect/HW1IR/: CMakeLists.txt  HW1IR.td  HW1IRDialect.h  HW1IROpBase.td
mlir/lib/HW1/: CMakeLists.txt  InitAll.cpp
mlir/lib/HW1/Conversion/: CMakeLists.txt  ConvertToHW1IRPass.cpp  Passes.cpp
mlir/lib/HW1/Dialect/: CMakeLists.txt
mlir/lib/HW1/Dialect/HW1IR/: CMakeLists.txt
mlir/lib/HW1/Dialect/HW1IR/IR/: CMakeLists.txt  HW1IRDialect.cpp
